--- a/relay.html
+++ b/relay.html
@@ -35,7 +35,6 @@
       margin-bottom: 2rem;
       background: linear-gradient(45deg, var(--primary-color), var(--accent-color));
       -webkit-background-clip: text;
-      background-clip: text;
       -webkit-text-fill-color: transparent;
       letter-spacing: 1px;
     }
@@ -132,13 +131,22 @@
     }
 
     @media (max-width: 768px) {
+      body {
+        padding: 1rem;
+      }
+
       .container {
         padding: 1rem;
         margin: 1rem;
       }
       
       .relay-grid {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
+      }
+
+      .control-buttons button {
+        width: 100%;
+        margin-bottom: 1rem;
       }
     }
   </style>
